# pspd_monitoria

./: .gitignore
broker-kafka/: .gitignore
broker-kafka/kafka/: README.md  consumer.py  docker-compose.yml  ler_kafka.py  producer.py  requirements.txt
broker-kafka/rabbitmq/: README.md  client.py  receive1.py  receive2.py  receive3.py  receive4.py  receive5.py  send1.py  send2.py  send3.py  send4.py  send5.py  worker.py
cluster/: .gitignore  README.md  chococino_bashrc  create_elastic_student.sh  create_hadoop_user.sh  create_user.sh  elastic-start-all.sh  elastic-stop-all.sh  hadoop-start-all.sh  hadoop-stop-all.sh  jupyter-lab  kafka-start-all.sh  kafka-stop-all.sh  nodes  nodes_setup.sh  setup_config.sh  setup_env.sh  setup_hadoop.sh  setup_network.sh  setup_nfs_master.sh  setup_ports.sh  setup_worker.sh  spark-start-all.sh  spark-stop-all.sh  stop_worker.sh
cluster-chococino/: Tutorial.ipynb
cluster/docs/: chococino.md  elasticsearch.md  hadoop.md  kafka.md  kibana.md  spark.md  ssh-tunneling.md
cluster/docs/examples/: Hadoop.ipynb  Kafka.ipynb  connector.properties  elastic.properties  spark_kafka.ipynb  spark_kafka_elasticsearch.ipynb
cluster/spark/conf/: spark-env.sh  workers
hadoop-cluster/: .gitignore
hadoop_cluster/: Untitled.ipynb
rpc-grpc/: .gitignore  README.md  cabal.project.local  gRPC-PSPD.cabal  minmax.proto
rpc-grpc/haskell/: Main.hs  Minmax.hs
rpc-grpc/python/: minmax_client.py  minmax_pb2.py  minmax_pb2_grpc.py  minmax_server.py
spark-cluster/: Dockerfile  requirements.txt
spark/mllib/: README.md  predict.ipynb  train.ipynb
(+40 files in other folders)
