cabal-version:      2.4
name:               gRPC-PSPD
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thiago Paiva
maintainer:         thiagohdaqw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable gRPC-PSPD
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Minmax

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
       base >=4.8 && <5.0
      , async
      , bytestring == 0.10.*
      , containers >=0.5 && <0.7
      , deepseq
      , grpc-haskell
      , grpc-haskell-core >=0.2.0
      , optparse-generic
      , proto3-suite
      , proto3-wire
      , text
      , vector
      , random
    hs-source-dirs:   haskell
    default-language: Haskell2010
    ghc-options: -g -threaded -rtsopts -with-rtsopts=-N
